# pid

./: .gitignore  CMakeLists.txt
.github/workflows/: clang.yml  cmake.yml
at_interface/: CMakeLists.txt  PidFiller.cpp  PidFiller.hpp
macro/: RunGetter.C  bb_na49.C  bb_na49.root  bb_na61.h  bb_na61.root  cut_log20p_dEdx_allneg.C  cut_log20p_dEdx_bgneg1.C  cut_log20p_dEdx_bgneg2.C  cut_log20p_dEdx_bgpos1.C  cut_log20p_dEdx_deuteron.C  cut_log20p_dEdx_eneg.C  cut_log20p_dEdx_eneg_na49.C  cut_log20p_dEdx_epos.C  cut_log20p_dEdx_kaonneg.C  cut_log20p_dEdx_kaonneg_na49.C  cut_log20p_dEdx_pionneg.C  cut_log20p_dEdx_pionneg_na49.C  cut_log20p_dEdx_pionpos.C  cut_log20p_dEdx_pionpos_na49.C  cut_log20p_dEdx_proton_na49.C  cut_p_dEdx_pionneg.C  cut_pt_dEdx_pionneg.C  fit_na49_pbpb40.C  fit_na61_pbpb13.C  fit_na61_pbpb30.C  plotPurities.C  rootlogon.C
src/: Constants.h  FitHelper.h  Fitter.cpp  Fitter.h  Getter.h  Parameters.cpp  Parameters.h  ParticleFit.cpp  ParticleFit.h
tasks/: CMakeLists.txt  fill_pid.cpp  run_pid_dcm12.cpp  run_pid_dcm3.cpp
